READMEのUpdate
Add instructions for accessing internal APIs when migrating from Java 8 to Java 11, including compilation and execution commands.